invoice-service.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: invoice-service
  labels:
    app: invoice-service
    run: invoice-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-service
  template:
    metadata:
      labels:
        app: invoice-service
    spec:
      volumes:
      - name: invoice-service-config
        configMap:
          name: invoice-service-config
      - name: ssl-certs
        secret:
          secretName: ssl-certs
      containers:
      - name: server
        image: us.gcr.io/ompldr/server:latest
        resources:
          requests:
            cpu: "0.5"
            memory: "3Gi"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        volumeMounts:
        - mountPath: /etc/ompldr-config
          name: invoice-service-config
          readOnly: true
        - name: ssl-certs
          mountPath: /ssl-certs
          readOnly: true
