periodic-service.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: periodic-service
  labels:
    app: periodic-service
    run: periodic-service
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: periodic-service
  template:
    metadata:
      labels:
        app: periodic-service
    spec:
      volumes:
      - name: periodic-service-config
        configMap:
          name: periodic-service-config
      - name: ssl-certs
        secret:
          secretName: ssl-certs
      - name: macaroons
        secret:
          secretName: macaroons
      containers:
      - name: server
        image: us.gcr.io/ompldr/server:latest
        resources:
          requests:
            cpu: "0.5"
            memory: "3Gi"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        volumeMounts:
        - mountPath: /etc/ompldr-config
          name: periodic-service-config
          readOnly: true
        - name: ssl-certs
          mountPath: /ssl-certs
          readOnly: true
        - name: macaroons
          mountPath: /macaroons
          readOnly: true
