api-server.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      volumes:
      - name: api-server-config
        configMap:
          name: api-server-config
      - name: ssl-certs
        secret:
          secretName: ssl-certs
      - name: macaroons
        secret:
          secretName: macaroons
      containers:
      - name: server
        image: us.gcr.io/ompldr/server:latest
        resources:
          requests:
            cpu: "0.5"
            memory: "3Gi"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        volumeMounts:
        - name: api-server-config
          mountPath: /etc/ompldr-config
          readOnly: true
        - name: ssl-certs
          mountPath: /ssl-certs
          readOnly: true
        - name: macaroons
          mountPath: /macaroons
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: api-server-svc
  labels:
    app: api-server
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: http
    targetPort: 8080
    nodePort: 30061
  selector:
    app: api-server
