web.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: us.gcr.io/ompldr/web:latest
        resources:
          requests:
            cpu: "0.5"
            memory: "0.5Gi"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
    nodePort: 30062
  selector:
    app: web
