api-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ompldr-ipv4
    kubernetes.io/ingress.class: gce-multi-cluster
  labels:
    app: api-server
  name: api-server-ingress
spec:
  backend:
    serviceName: api-server-svc
    servicePort: 8080
